# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  package-lock.json  package.json  pyproject.toml
hooks/: check-commit-msg.js  check-commit-msg.ts  check_commit_msg.py
